--- a/Tyuiu.KozachokNA.Sprint1.Task0.V0.Lib/Tyuiu.KozachokNA.Sprint1.Task0.V0.Lib.csproj
+++ b/Tyuiu.KozachokNA.Sprint1.Task0.V0.Lib/Tyuiu.KozachokNA.Sprint1.Task0.V0.Lib.csproj
@@ -8,7 +8,19 @@
 
   <ItemGroup>
     <Reference Include="tyuiu.cources.programming.interfaces">
+      <HintPath>..\tyuiu-cources-programming-interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="tyuiu.cources.programming.interfaces">
       <HintPath>..\tyuiu_cources_programming_interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="tyuiu.cources.programming.interfaces">
+      <HintPath>..\tyuiu_cources_programming_interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="tyuiu.cources.programming.interfaces">
+      <HintPath>..\tyuiu_cources_programming_interfaces.dll</HintPath>
+    </Reference>
+    <Reference Include="tyuiu.cources.programming.interfaces">
+      <HintPath>..\tyuiu-cources-programming-interfaces.dll</HintPath>
     </Reference>
   </ItemGroup>
 
