--- a/.gitignore
+++ b/.gitignore
@@ -362,3 +362,4 @@ MigrationBackup/
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
 /Tyuiu.KozachokNA.Sprint1.sln
+/Tyuiu.KozachokNA.Sprint1.Task0.V0.Lib
